--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -192,7 +192,7 @@ a{
     .navbar_content {
         position: relative;
         z-index: 10; 
-        font-size: 0.3rem;
+        font-size: 0.6rem;
         pointer-events: auto;
     }
 
@@ -216,6 +216,11 @@ a{
     .social_accounts {
         width: 1rem;
         height: 1rem;
+    }
+
+    #the_content{
+        position: relative;
+        left: 30px;
     }
 
     .contact {
