--- a/static/css/Contact.css
+++ b/static/css/Contact.css
@@ -13,20 +13,27 @@
     src: url(../fonts/PoiretOne-Regular.ttf);
 }
 
-#div1 {
-    width: 100vw;
-    padding: 7rem;
+* {
     box-sizing: border-box;
-    background-color: lightcyan;
+    margin: 0;
+    padding: 0;
 }
 
-#home_contact{
+#div1 {
+    width: 100%;
+    padding: 7rem;
+    background-color: lightcyan;
+    overflow-x: hidden;
+}
+
+#home_contact {
     display: flex;
     gap: 10px;
     font-size: 0.90rem;
+    flex-wrap: wrap;
 }
 
-#details{
+#details {
     text-align: center;
     margin: 20px auto;
 }
@@ -37,7 +44,7 @@
     margin-bottom: 10px;
 }
 
-.list1, .list2{
+.list1, .list2 {
     padding: 10px 80px;
     font-size: 1rem;
     text-align: left;
@@ -52,16 +59,13 @@ a:visited {
     padding: 8rem;
     font-family: font2;
     font-weight: 600;
-    box-sizing: border-box;
     text-align: center;
 }
 
 .s1 {
     font-size: 30px;
     word-spacing: 0.70rem;
-    
 }
-
 
 #b1 {
     background-color: rgb(98, 249, 98);
@@ -71,7 +75,7 @@ a:visited {
     background-color: rgb(74, 247, 74);
 }
 
-#div2{
+#div2 {
     width: 100%;
     height: 15vh;
     background-color: lightcoral;
@@ -95,8 +99,7 @@ a:visited {
     padding: 0.70em;
 }
 
-
-#form_container{
+#form_container {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -112,7 +115,6 @@ a:visited {
     padding: 20px;
     border-radius: 10px;
 }
-
 
 .form-row {
     display: flex;
@@ -138,14 +140,13 @@ input[type="text"], input[type="date"] {
     border-bottom: 1px solid gray;
     padding: 8px;
     font-size: 14px;
-    box-sizing: border-box;
 }
 
 .full-width {
     width: 100%;
 }
 
-textarea{
+textarea {
     border: none;
     outline: none;
     width: 100%;
@@ -173,8 +174,6 @@ button:hover {
     background-color: #0056b3;
 }
 
-
-
 @media (max-width: 768px) {
     #details {
         display: flex;
@@ -185,13 +184,12 @@ button:hover {
     .add_div {
         flex: 1;
         padding: 10px;
-        box-sizing: border-box;
     }
     .list1, .list2 {
         text-align: center;
     }
     #b1 {
-        width: 100%;
+        width: 60%;
         min-width: 50ch;
         font-size: 0.6rem;
     }
