--- a/static/css/Contact.css
+++ b/static/css/Contact.css
@@ -19,6 +19,12 @@
     padding: 0;
 }
 
+body {
+    
+    overflow-y: auto; 
+    overflow-x: hidden; 
+}
+
 #div1 {
     width: 100%;
     padding: 7rem;
