--- a/template/Contact.html
+++ b/template/Contact.html
@@ -16,7 +16,7 @@
  
        
         <div id="session">
-            <span class="s1">BOOK SESSION</span><br><br>
+            <span class="s1">BOOK</span><br><br>
             <div style="line-height: 0.1rem;">HK EVENTS</div><br>
             <button id="b1">Book Session</button>
         </div>
