--- a/template/Home.html
+++ b/template/Home.html
@@ -87,11 +87,11 @@
     </div>
     <div class="events">
         <img src="https://thediamondrock.com/wp-content/uploads/2024/11/whatweoffer_madame_venue.jpg"  alt="">
-       <span class="event_lists">Planning service</span></a>
+       <a href="{% url 'Eventapp:venue' %}"><span class="event_lists">Stories</span></a>
     </div>
     <div class="events">
         <img src="https://thediamondrock.com/wp-content/uploads/2024/11/whatweoffer_wonderland.jpg"  alt="">
-        <a href="{% url 'Eventapp:venue' %}"><span class="event_lists">Wedding Stories</span></a>
+        <a href="{% url 'Eventapp:contact' %}"><span class="event_lists">Contact</span></a>
     </div>
 </div>
 
