--- a/static/css/Venue.css
+++ b/static/css/Venue.css
@@ -461,7 +461,7 @@ body {
     .pack {
         width: 100%;
         height: auto;
-        margin-left: 0;
+        margin: 50px  0;
         left: 0;
         top: 0;
     }
@@ -539,7 +539,7 @@ body {
     .pack {
         width: 48%;
         height: auto;
-        margin-left: 1%;
+         margin: 50px  10px;
         left: 0;
         top: 0;
     }
@@ -611,7 +611,7 @@ body {
     .pack {
         width: 30%;
         height: auto;
-        margin-left: 2%;
+         margin: 50px  20px;
         left: 0;
         top: 0;
     }
