--- a/static/css/Base.css
+++ b/static/css/Base.css
@@ -6,7 +6,12 @@
 body {
     
     overflow-y: auto; 
+    
+}
+
+body{
     overflow-x: hidden; 
+    width: 100%;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
