--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -5,11 +5,17 @@
 }
 
 body {
+    
     overflow-y: auto; 
-    overflow-x: hidden; 
-    line-height: 1.5;
-    margin: 0;
+    
 }
+
+body{
+    overflow-x: hidden; 
+    width: 100%;
+}
+
+
 
 @font-face {
     font-family: fancy;
