--- a/static/css/Venue.css
+++ b/static/css/Venue.css
@@ -14,9 +14,16 @@
 }
 
 body {
+    
     overflow-y: auto; 
-    overflow-x: hidden; 
+    
 }
+
+body{
+    overflow-x: hidden; 
+    width: 100%;
+}
+
 
 #div1 {
     width: 100%;
