--- a/template/Home.html
+++ b/template/Home.html
@@ -60,7 +60,7 @@
 
 <div class="grid">
     <div class="track-top">
-        {% for image in gallery_data %}
+        {% for image in gallery_data1 %}
             <div class="item" style="background-image: url('{{ image.gallery_images.url }}');"></div>
         {% endfor %}
 
