--- a/template/Home.html
+++ b/template/Home.html
@@ -68,7 +68,7 @@
 
     <div class="track-bottom">
         {% for image in gallery_data2 %}
-            <div class="item item-fast" style="background-image: url('{{ image.gallery_images.url }}');"></div>
+            <div class="item" style="background-image: url('{{ image.gallery_images.url }}');"></div>
         {% endfor %}
     </div>
 </div>
