--- a/template/Home.html
+++ b/template/Home.html
@@ -67,8 +67,8 @@
     </div>
 
     <div class="track-bottom">
-        {% for image in gallery_data2 %}
-            <div class="item" style="background-image: url('{{ image.gallery_images.url }}');"></div>
+        {% for image in gallery_data1 %}
+            <div class="item item-fast" style="background-image: url('{{ image.gallery_images.url }}');"></div>
         {% endfor %}
     </div>
 </div>
